agentgateway/agentgateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agentgateway-ingress
  namespace: agentgateway
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /agentgateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: agentgateway
                port:
                  number: 15000
    - host: cnoe.localtest.me
      http:
        paths:
          - path: /agentgateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: agentgateway
                port:
                  number: 15000
